[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/img/A_Attack with keyboard3.png" type="Texture" id=1]
[ext_resource path="res://src/img/A_Attack with keyboard1.png" type="Texture" id=2]
[ext_resource path="res://src/img/A_Hurt.png" type="Texture" id=3]
[ext_resource path="res://src/img/A_Walk1.png" type="Texture" id=4]
[ext_resource path="res://src/img/A_Walk2.png" type="Texture" id=5]
[ext_resource path="res://src/Player/Player1.gd" type="Script" id=6]
[ext_resource path="res://src/img/A_Stay.png" type="Texture" id=7]
[ext_resource path="res://src/img/A_Attack with keyboard4.png" type="Texture" id=8]
[ext_resource path="res://src/img/A_Attack with keyboard5.png" type="Texture" id=9]
[ext_resource path="res://src/img/A_Attack with keyboard2.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.1875, 60 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.5, 60 )

[node name="Player1" type="KinematicBody2D"]
position = Vector2( 0, 8 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "attack"
frame = 4

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 62.5, 0 )
shape = SubResource( 4 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
